feat: Add update and partial update methods for travel plans