@@ -1,13 +1,7 @@
 package oocl.travelassistant.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import oocl.travelassistant.dto.AccommodationDTO;
-import oocl.travelassistant.dto.BudgetBreakdownDTO;
-import oocl.travelassistant.dto.DailyPlanDTO;
-import oocl.travelassistant.dto.MealsDTO;
-import oocl.travelassistant.dto.TransportationDTO;
-import oocl.travelassistant.dto.TravelPlanDTO;
-import oocl.travelassistant.entity.TravelPlan;
+import oocl.travelassistant.dto.*;
 import oocl.travelassistant.entity.User;
 import oocl.travelassistant.repository.TravelPlanRepository;
 import oocl.travelassistant.repository.UserRepository;
@@ -23,14 +17,16 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
 @ActiveProfiles("test")
 @AutoConfigureMockMvc
-public class TravelPlanControllerTest {
+class TravelPlanControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -47,18 +43,17 @@ public class TravelPlanControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    private User testUser;
     private String jwtToken;
 
     @BeforeEach
     void setUp() {
         travelPlanRepository.deleteAll();
         userRepository.deleteAll();
-        
-        testUser = new User();
+
+        User testUser = new User();
         testUser.setUsername("testuser");
         testUser.setPasswordHash(passwordEncoder.encode("password"));
-        testUser = userRepository.save(testUser);
+        userRepository.save(testUser);
 
         jwtToken = loginAndGetToken();
     }
@@ -131,7 +126,7 @@ public class TravelPlanControllerTest {
 
         dailyPlan1.setDailyCost(new BigDecimal("800.00"));
 
-        travelPlanDTO.setDailyPlan(Arrays.asList(dailyPlan1));
+        travelPlanDTO.setDailyPlan(List.of(dailyPlan1));
         travelPlanDTO.setTips(Arrays.asList("Bring sunscreen", "Learn basic phrases"));
         
         return travelPlanDTO;
@@ -215,10 +210,170 @@ public class TravelPlanControllerTest {
                 .getResponse()
                 .getContentAsString();
                 
-        Long travelPlanId = objectMapper.readTree(response).get("id").asLong();
+        long travelPlanId = objectMapper.readTree(response).get("id").asLong();
 
         mockMvc.perform(delete("/api/travel-plans/" + travelPlanId)
                 .header("Authorization", "Bearer " + jwtToken))
                 .andExpect(status().isNoContent());
     }
+
+    @Test
+    void should_partially_update_travel_plan() throws Exception {
+        TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
+        String body = objectMapper.writeValueAsString(travelPlanDTO);
+
+        String response = mockMvc.perform(post("/api/travel-plans")
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
+                .andExpect(status().isOk())
+                .andReturn()
+                .getResponse()
+                .getContentAsString();
+
+        long travelPlanId = objectMapper.readTree(response).get("id").asLong();
+
+        String patchBody = """
+            {
+              "title": "Partially Updated Travel Plan"
+            }
+            """;
+
+        mockMvc.perform(patch("/api/travel-plans/" + travelPlanId)
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(patchBody))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.title").value("Partially Updated Travel Plan"));
+    }
+
+    @Test
+    void should_fully_update_travel_plan() throws Exception {
+        TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
+        String body = objectMapper.writeValueAsString(travelPlanDTO);
+
+        String response = mockMvc.perform(post("/api/travel-plans")
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
+                .andExpect(status().isOk())
+                .andReturn()
+                .getResponse()
+                .getContentAsString();
+
+        long travelPlanId = objectMapper.readTree(response).get("id").asLong();
+
+        travelPlanDTO.setTitle("Fully Updated Travel Plan");
+        String putBody = objectMapper.writeValueAsString(travelPlanDTO);
+
+        mockMvc.perform(put("/api/travel-plans/" + travelPlanId)
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(putBody))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.title").value("Fully Updated Travel Plan"));
+    }
+
+    private String loginAndGetTokenFor() {
+        try {
+            User u = new User();
+            u.setUsername("otheruser");
+            u.setPasswordHash(passwordEncoder.encode("password"));
+            userRepository.save(u);
+
+            String loginBody = String.format("{%n  \"usernameOrEmail\": \"%s\",%n  \"password\": \"%s\"%n}%n", "otheruser", "password");
+            String response = mockMvc.perform(post("/api/login")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(loginBody))
+                    .andExpect(status().isOk())
+                    .andReturn()
+                    .getResponse()
+                    .getContentAsString();
+            return objectMapper.readTree(response).get("token").asText();
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to create/login user", e);
+        }
+    }
+
+    @Test
+    void should_return_401_when_no_auth() throws Exception {
+        mockMvc.perform(get("/api/travel-plans"))
+                .andExpect(status().isUnauthorized());
+
+        TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
+        String body = objectMapper.writeValueAsString(travelPlanDTO);
+        mockMvc.perform(post("/api/travel-plans")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
+                .andExpect(status().isUnauthorized());
+    }
+
+    @Test
+    void should_return_400_for_malformed_json() throws Exception {
+        String badJson = "{ invalid json }";
+
+        mockMvc.perform(post("/api/travel-plans")
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(badJson))
+                .andExpect(status().isBadRequest());
+
+        mockMvc.perform(put("/api/travel-plans/1")
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(badJson))
+                .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    void should_return_404_when_updating_non_existent_travel_plan() throws Exception {
+        String patchBody = "{ \"title\": \"Does not exist\" }";
+        mockMvc.perform(put("/api/travel-plans/999")
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(patchBody))
+                .andExpect(status().isNotFound());
+
+        mockMvc.perform(patch("/api/travel-plans/999")
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(patchBody))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void should_return_404_when_updating_other_users_travel_plan() throws Exception {
+        // 创建旅行计划（属于 testuser）
+        TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
+        String body = objectMapper.writeValueAsString(travelPlanDTO);
+
+        String response = mockMvc.perform(post("/api/travel-plans")
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
+                .andExpect(status().isOk())
+                .andReturn()
+                .getResponse()
+                .getContentAsString();
+
+        long travelPlanId = objectMapper.readTree(response).get("id").asLong();
+
+        // 创建另一个用户并登录
+        String otherToken = loginAndGetTokenFor();
+
+        String updateBody = "{ \"title\": \"Hacked\" }";
+
+        mockMvc.perform(put("/api/travel-plans/" + travelPlanId)
+                        .header("Authorization", "Bearer " + otherToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(updateBody))
+                .andExpect(status().isNotFound());
+
+        mockMvc.perform(patch("/api/travel-plans/" + travelPlanId)
+                        .header("Authorization", "Bearer " + otherToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(updateBody))
+                .andExpect(status().isNotFound());
+    }
+
 }
